--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,12 +16,13 @@ build:
 
 requirements:
   host:
-    - python
+    - python >=3.6
     - pip
   run:
     - matplotlib-base
     - numpy
-    - python
+    - python >=3.6
+    - scipy
 
 test:
   imports:
