--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,8 +16,9 @@ build:
 
 requirements:
   host:
-    - python >=3.6
     - pip
+    - python >=3.6
+    - setuptools
   run:
     - matplotlib-base
     - numpy
